<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/btn_quite"
        android:gravity="bottom|right"
        android:orientation="vertical"
        android:paddingRight="45dp"
        android:paddingBottom="17dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devLabel"
            android:textColor="@color/white"
            android:visibility="visible"
            tools:text="@string/devLabel" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:padding="25dp"
            android:text="@string/btn_settings"
            android:textColor="@color/btn_edit"
            android:textColorLink="#D35A5A"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:paddingLeft="25dp"
            android:text="@string/label_langue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp">




            <RadioGroup
                android:id="@+id/radioGroupSettingsLangue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonSettingsFrancais"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_fr" />

                <RadioButton
                    android:id="@+id/radioButtonSettingsAnglais"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_en" />

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:paddingLeft="25dp"
            android:text="@string/label_niveau"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical"
            android:paddingLeft="25dp">

            <RadioGroup
                android:id="@+id/radioGroupDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioSettingsFacile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_facile" />

                <RadioButton
                    android:id="@+id/radioSettingsMoyen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_moyen" />

                <RadioButton
                    android:id="@+id/radioSettingsDifficile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_Lev_difficulte" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="12dp">

            <Button
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@color/btn_quite"
                android:onClick="saveSettings"
                android:text="@string/btn_save"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@color/btn_edit"
                android:onClick="showDictionary"
                android:text="@string/dic_title"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>