<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    tools:context=".Accueil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@color/btn_quite"
                android:gravity="bottom|right"
                android:orientation="vertical"
                android:paddingRight="45dp"
                android:paddingBottom="17dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/devLabel"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    tools:text="@string/devLabel" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="390dp"
                android:layout_height="395dp"
                android:padding="12dp"
                app:srcCompat="@drawable/acceuil" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:onClick="startGame"
                    android:text="@string/tbn_start" />

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:onClick="goPreferences"
                    android:text="@string/btn_settings" />

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:onClick="showStory"
                    android:text="@string/btn_history" />

                <Button
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:onClick="quiteGame"
                    android:text="@string/btn_quit" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>