<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/editMotFrancais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/hint_motFrancais"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editMotAnglais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/hint_motAnglais"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMotFrancais" />

    <RadioGroup
        android:id="@+id/radioGroupSettingsLangue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@+id/editMotAnglais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioFacile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioBtnFacile"
            android:textSize="25dp" />

        <RadioButton
            android:id="@+id/radioMoyen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioBtnMoyen"
            android:textSize="25dp" />

        <RadioButton
            android:id="@+id/radioDifficile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioBtnDifficile"
            android:textSize="25dp" />
    </RadioGroup>


    <Button
        android:id="@+id/btn_ajouter"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="45dp"
        android:text="@string/btnAjouterMot"
        android:textAllCaps="false"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSettingsLangue" />

</androidx.constraintlayout.widget.ConstraintLayout>