<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".HistoriqueView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/btn_quite"
        android:gravity="bottom|right"
        android:orientation="vertical"
        android:paddingRight="45dp"
        android:paddingBottom="17dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devLabel"
            android:textColor="@color/white"
            android:visibility="visible"
            tools:text="@string/devLabel" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:orientation="horizontal"
        android:padding="12dp">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@color/btn_delete"
            android:text="@string/del_tbn"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:background="@color/btn_quite"
            android:onClick="backPage"
            android:text="@string/home_page"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="12dp"
            android:text="@string/btn_history"
            android:textColor="@color/btn_edit"
            android:textSize="22dp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/id_listHistoriqueRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="clearStory" />
</LinearLayout>