<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ResultView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/btn_quite"
        android:gravity="bottom|right"
        android:orientation="vertical"
        android:paddingRight="45dp"
        android:paddingBottom="17dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devLabel"
            android:textColor="@color/white"
            android:visibility="visible"
            tools:text="@string/devLabel" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/message_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:text="@string/textview_messageVictoire"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_end"
            android:layout_width="284dp"
            android:layout_height="322dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:padding="42dp"
            app:srcCompat="@drawable/winner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_restart_game"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/btn_quite"
            android:text="@string/btn_restart"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_quit_game"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/btn_quite"
            android:text="@string/btn_quit"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>