<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DictionaryView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/main_color"
            android:text="@string/home_page" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/dic_title"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="Name" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="Name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="213dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button5"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:background="@color/main_color"
            android:text="@string/add_tbn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="Name" />

        <Button
            android:id="@+id/button6"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:background="@color/main_color"
            android:text="@string/del_tbn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="212dp"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="195dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp" />

</LinearLayout>